<resources>
    <string name="app_name">YouthsChat</string>
    <string name="main_wechat">Chat</string>
    <string name="main_friend">My Friends</string>
    <string name="main_find_friend">My Contacts</string>
    <string name="main_me">Settings</string>
    <string name="prompt">Hint</string>
    <string name="check_connection">Network Connection Error!</string>
    <string name="check_sdcard">Please check memory card</string>
 	<string name="close">Close</string>
	<string name="exit">Quit</string>
	<string name="confirm">Yes</string>
	<string name="cancel">Cancel</string>
	<string name="dir">/youthschat</string>
	<string name="app_dir">/app</string>
	<string name="db_dir">/database</string>
	<string name="img_dir">/img</string>
	<string name="clearwords">Clear?</string>
     <string name="no_data">No matching data</string>
    <string name="network_not_connected">Network connection error!</string>
    <string name="xml_parser_failed"></string>
    <string name="io_exception_error">File corrupted</string>
    <string name="http_status_code_error">Network failed: %d</string>
    <string name="http_exception_error">Time out</string>
    <string name="socket_exception_error">I/O error</string>
    <string name="app_run_code_error">Application failed</string>
    <string name="app_menu_surelogout">Do you want to log out?</string>
    <string name="sure">Yes</string>
    <string name="cancle">Cancel</string>
    <string name="edit">Edit</string>
    <string name="app_error">Application Error</string>
    <string name="app_error_message">We are sorry for the error, please submit the error report, we will take a look soon.</string>
    <string name="submit_report">Submit Report</string>
    <string name="load_more">More</string>
    <string name="load_ing">Loading\u2026</string>
    <string name="load_full">Loaded</string>
    <string name="load_empty">Be the first to leave a comment!</string>
    <string name="load_error">Load error</string>
    <string name="new_data_toast_message">%d messages</string>
    <string name="new_data_toast_none">No new messages</string>
    <string name="msg_load_is_null">Loading failed, may have been deleted</string>
    <string name="msg_login_email_error">Invalid email address</string>
    <string name="msg_login_email_null">Please enter email</string>
    <string name="msg_login_pwd_null">Please enter password</string>
    <string name="msg_login_success">Log in success!</string>
    <string name="msg_login_fail">Log in failed!</string>
    <string name="msg_login_error">The user is not registered or the password is incorrect</string>
    <string name="msg_load_userface_fail">Image loading failed</string>
    <string name="msg_load_image_fail">Image Loading failed</string>
    <string name="msg_read_detail_fail">Failed to get the post content</string>
    <string name="msg_noaccess_delete">You don\'t have permission to delete</string>
    <string name="no_sdcard">No SD card</string>
    <string name="login">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="forgot_password">Forgot passord?</string>
    <string name="logout">Sign out</string>
    <string name="retrive_password">Retrive Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="already_have_code">Already got the code?</string>
    <string name="resend_code">Send me code again</string>
    <string name="ok">OK</string>
    <string name="send_code">Send</string>
    <string name="account">Phone Number</string>
    <string name="password">Password</string>
    <string name="login_check_account">Please enter the registered phone number</string>
    <string name="login_check_password">Please enter the phone number</string>
    <string name="login_check_server">Signing in\u2026</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="head">What do I look like?</string>
    <string name="your_phone_num">Your phone number (This will be your login). If this is not your phone number, please try using your own phone to sign up. </string>
    <string name="your_phone_retrive_password">Enter your phone number (A code will be sent to your registered email address) </string>
    <string name="registered_email">Registered email </string>
    <string name="enter_code_reset_password">Enter the code from email</string>
    <string name="new_password">New password </string>
    <string name="repeat_new_password">Repeat new password </string>
    <string name="enter_msg_to_chat">Enter messages to start chat</string>
    <string name="hold_to_talk">Hold to record, release to send</string>
	<string name="app_update">检查新版本</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
      <string name="app_picker_name">应用</string>
	  <string name="bookmark_picker_name">书签</string>
	  <string name="button_add_calendar">添加事件至日历</string>
	  <string name="button_add_contact">添加联系人</string>
	  <string name="button_back">返回</string>
	  <string name="button_book_search">图书搜索</string>
	  <string name="button_cancel">取消</string>
	  <string name="button_custom_product_search">自定义搜索</string>
	  <string name="button_dial">拨号</string>
	  <string name="button_done">完成</string>
	  <string name="button_email">发送email</string>
	  <string name="button_get_directions">获取地址</string>
	  <string name="button_google_shopper">谷歌购物</string>
	  <string name="button_mms">发送彩信</string>
	  <string name="button_ok">确定</string>
	  <string name="button_open_browser">打开网址</string>
	  <string name="button_product_search">产品搜索</string>
	  <string name="button_search_book_contents">搜索图书内容</string>
	  <string name="button_share_app">共享应用</string>
	  <string name="button_share_bookmark">分享书签</string>
	  <string name="button_share_by_email">email分享</string>
	  <string name="button_share_by_sms">短信分享</string>
	  <string name="button_share_clipboard">分享剪切板</string>
	  <string name="button_share_contact">分享联系人</string>
	  <string name="button_show_map">显示地图</string>
	  <string name="button_sms">发送短信</string>
	  <string name="button_web_search">网页搜索</string>
	  <string name="button_wifi">连接到网络</string>
	  <string name="contents_contact">联系人信息</string>
	  <string name="contents_email">Email地址</string>
	  <string name="contents_location">地理坐标</string>
	  <string name="contents_phone">电话号码</string>
	  <string name="contents_sms">短信地址</string>
	  <string name="contents_text">纯文本</string>
	  <string name="history_clear_one_history_text">删除</string>
	  <string name="history_clear_text">删除历史</string>
	  <string name="history_email_title">条码扫描器历史</string>
	  <string name="history_empty">空的</string>
	  <string name="history_empty_detail">没有条码扫描已记录</string>
	  <string name="history_send">发送历史</string>
	  <string name="history_title">历史</string>
	  <string name="menu_encode_mecard">使用MECARD</string>
	  <string name="menu_encode_vcard">使用vCard</string>
	  <string name="menu_help">帮助</string>
	  <string name="menu_history">历史</string>
	  <string name="menu_settings">设置</string>
	  <string name="menu_share">分享</string>
	  <string name="msg_bulk_mode_scanned">批量扫描：找到条码，已保存</string>
	  <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
	  <string name="msg_default_format">格式</string>
	  <string name="msg_default_meta">元数据</string>
	  <string name="msg_default_mms_subject">Hi</string>
	  <string name="msg_default_time">时间</string>
	  <string name="msg_default_type">类型</string>
	  <string name="msg_encode_contents_failed">无法根据已有数据生成条码。   </string>
	  <string name="msg_google_books">谷歌图书</string>
	  <string name="msg_google_product">谷歌购物</string>
	  <string name="msg_google_shopper_missing">谷歌购物未安装</string>
	  <string name="msg_install_google_shopper">谷歌购物是一款将条码扫描和商品比价相结合的应用，谷歌购物不使用浏览器，您想尝试吗？</string>
	  <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
	  <string name="msg_redirect">重定向</string>
	  <string name="msg_sbc_book_not_searchable">抱歉，无法找到此图书。</string>
	  <string name="msg_sbc_failed">抱歉，搜索时遇到错误。</string>
	  <string name="msg_sbc_no_page_returned">无页面返回</string>
	  <string name="msg_sbc_page">页面</string>
	  <string name="msg_sbc_results">结果</string>
	  <string name="msg_sbc_searching_book">搜索图书…</string>
	  <string name="msg_sbc_snippet_unavailable">摘录不可用</string>
	  <string name="msg_sbc_unknown_page">未知页面</string>
	  <string name="msg_share_explanation">您可以通过在自己的手机上显示条码，并使用其它手机扫描此条码的方式进行分享</string>
	  <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
	  <string name="msg_share_text">或键入一些文字</string>
	  <string name="msg_sure">你肯定吗？</string>
	  <string name="msg_unmount_usb">抱歉，SD卡不可访问。</string>
	  <string name="preferences_actions_title">找到条码时</string>
	  <string name="preferences_auto_focus_title">使用自动对焦</string>
	  <string name="preferences_bulk_mode_summary">连续扫描并保存多个条形码</string>
	  <string name="preferences_bulk_mode_title">批量扫描模式</string>
	  <string name="preferences_copy_to_clipboard_title">复制到剪切板</string>
	  <string name="preferences_custom_product_search_summary" formatted="false">替换：％s=内容，％f=格式，％t=类型</string>
	  <string name="preferences_custom_product_search_title">自定义搜索网址</string>
	  <string name="preferences_decode_1D_title">扫描 一维条码</string>
	  <string name="preferences_decode_Data_Matrix_title">扫描 DM码</string>
	  <string name="preferences_decode_QR_title">扫描 QR码</string>
	  <string name="preferences_device_bug_workarounds_title">设备问题解决办法</string>
	  <string name="preferences_disable_continuous_focus_summary">只使用标准对焦模式</string>
	  <string name="preferences_disable_continuous_focus_title">没有持续关注</string>
	  <string name="preferences_disable_exposure_title">无曝光</string>
	  <string name="preferences_front_light_auto">自动</string>
	  <string name="preferences_front_light_off">待用</string>
	  <string name="preferences_front_light_on">活跃</string>
	  <string name="preferences_front_light_summary">前灯可用时，打开前灯</string>
	  <string name="preferences_front_light_title">前灯</string>
	  <string name="preferences_general_title">一般设置</string>
	  <string name="preferences_name">设置</string>
	  <string name="preferences_play_beep_title">提示音</string>
	  <string name="preferences_remember_duplicates_summary">在历史记录中保存重复记录</string>
	  <string name="preferences_remember_duplicates_title">记住重复</string>
	  <string name="preferences_result_title">结果设置</string>
	  <string name="preferences_scanning_title">条码类型选择</string>
	  <string name="preferences_search_country">搜索国家</string>
	  <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
	  <string name="preferences_supplemental_title">检索更多信息</string>
	  <string name="preferences_try_bsplus">尝试条码扫描器+</string>
	  <string name="preferences_try_bsplus_summary">增强新的功能和接口</string>
	  <string name="preferences_vibrate_title">振动</string>
	  <string name="result_address_book">找到联系人信息</string>
	  <string name="result_calendar">找到日历事件</string>
	  <string name="result_email_address">找到email地址</string>
	  <string name="result_geo">找到地理坐标</string>
	  <string name="result_isbn">找到图书</string>
	  <string name="result_product">找到产品</string>
	  <string name="result_sms">找到短信地址</string>
	  <string name="result_tel">找到电话号码</string>
	  <string name="result_text">找到纯文本</string>
	  <string name="result_uri">找到URL</string>
	  <string name="result_wifi">发现网络配置</string>
	  <string name="sbc_name">Google图书搜索</string>
	  <string name="share_name">通过条码分享</string>
	  <string name="wifi_changing_network">请求连接到网络\u2026</string>
	  <string name="wifi_ssid_label">网络SSID</string>
	  <string name="wifi_type_label">类型</string>
	  <string name="remote_call_failed">Failure calling remote service</string>
	<string name="partnerHint">"partner"</string>
	<string name="sellerHint">"seller"</string>
	<string name="out_trade_noHint">"out_trade_no"</string>
	<string name="subjectHint">"subject"</string>
	<string name="bodyHint">"body"</string>
	<string name="total_feeHint">"total_fee"</string>
</resources>