<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >
    <RelativeLayout 
        android:layout_height="44dp"
        android:layout_width="match_parent"
        android:background="#ff7920"
        >
        
        <TextView 
            android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
            android:text="@string/retrive_password"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="@dimen/navbar_title_size"
            />
        
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:textColor="#222222"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:textSize="@dimen/navbar_button_text_size" 
        android:text="Select your country"
        android:textAppearance="?android:attr/textAppearanceLarge" />
 
    <Spinner
        android:id="@+id/country_spinner"
        android:layout_width="fill_parent"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textColor="#222222"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="28dp"
        android:text="@string/your_phone_retrive_password"
        android:textColor="#222222"
        android:textSize="@dimen/navbar_button_text_size" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginTop="18dp"
        android:layout_height="45dp"
        android:hint="Enter phone number"
        android:ems="11"
        android:textColorHint="#8f8f8f"
        android:textColor="#222222"
        android:textSize="@dimen/navbar_title_size" 
        android:inputType="phone" >
        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginTop="18dp"
        android:layout_height="45dp"
        android:ems="11"
        android:hint="Enter registered email"
        android:textColorHint="#8f8f8f"
        android:textColor="#222222"
        android:textSize="@dimen/navbar_title_size" 
        android:inputType="textEmailAddress" >
    </EditText>
    
    <Button 
        android:layout_marginTop="20dp"
        android:id="@+id/sendCodeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_code"
        android:onClick="ButtonClick"
        android:textSize="18sp"
        android:background="@drawable/red_button"
        style="@style/button_text"
        />
    
    <Button 
        android:layout_marginTop="20dp"
        android:id="@+id/alreadyHaveCodeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_code"
        android:onClick="ButtonClick"
        android:textSize="18sp"
        android:background="@drawable/red_button"
        style="@style/button_text"
        />

</LinearLayout>
